# social-music-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test_and_lint.yaml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_added_playlists_customuser_added_tracks.py
accounts/templates/: profile.html
app/: Dockerfile  Makefile  forms.py  mixins.py  models.py  requirements.txt  urls.py  views.py
app/app/: forms.py  views.py
app/config/: settings.py  urls.py
app/migrations/: 0001_initial.py  0002_comments_delete_comment.py  0002_customuser_following_alter_playlists_creator_and_more.py  0002_remove_tracks_authors_remove_tracks_genre_and_more.py  0003_alter_albums_reliased.py  0003_alter_customuser_following.py  0004_alter_albums_reliased.py  0004_alter_customuser_following.py  0005_alter_customuser_following.py  0005_rename_authors_artists.py  0006_alter_playlists_unique_together.py  0006_alter_tracks_album.py  0007_playlists_description.py
app/templates/: base.html  header.html  index.html  navbar.html  (+1 more)
docs/: Задание на итоговую аттестационную работу_Вихров.docx  Задание на итоговую аттестационную работу_Вихров_подписано_Кузьмин.docx  Отзыв руководителя итоговой работы_Вихров.docx  Отзыв руководителя итоговой работы_Вихров_подписано_Кузьмин.docx  Пояснительная записка_Вихров.docx  Пояснительная_записка_Вихров.docx  Презентация_Вихров.key  Текст_к_презентации.docx
project/: settings.py  urls.py
(+42 files in other folders)
